@@ -3,3 +3,5 @@
 
 Refactored SticTest to use PrintWriters rather than PrintStreams, since PrintWriters
 will be used later. Makes for less code = good. Refactoring suggested by David Kemp.
+
+Added Smalltalk and Environment Tests and Classes.
